<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/outline_poll_white_18dp" />

            <TextView
                android:id="@+id/cat1title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_cat1title"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:padding="32dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:src="@drawable/forest_swords_profile_pic" />

            <TextView
                android:id="@+id/nowPlayingArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:text="@string/nowPlayingArtist"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nowPlayingSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/nowPlayingSong"
                android:textColor="@color/colorText"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nowPlayingAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/nowPlayingAlbum"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTitle"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/outline_library_music_white_18dp" />

            <TextView
                android:id="@+id/library"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_cat2title"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>