<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/outline_perm_identity_white_18dp" />

            <TextView
                android:id="@+id/artist_cat1title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/artist_cat1title"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nowPlayingArtist"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nowPlayingArtistInfo"
                android:textColor="@color/colorText"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorTitle"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/outline_library_music_white_18dp" />

            <TextView
                android:id="@+id/library"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/artist_cat2title"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <ListView
            android:id="@+id/artist_songs_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp" />

    </LinearLayout>


</ScrollView>